--- a/package.json
+++ b/package.json
@@ -10,8 +10,15 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt/icon": "^1.15.0",
+    "@tailwindcss/vite": "^4.1.11",
     "nuxt": "^3.17.6",
+    "tailwindcss": "^4.1.11",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1"
+  },
+  "devDependencies": {
+    "@iconify-json/tabler": "^1.2.19",
+    "daisyui": "^5.0.46"
   }
 }
